# company-knowledge-os

./: .env.example  .env.operator.example  .gitignore  AGENTS.md  CLAUDE.md  EXECUTION_PLAN.md  Makefile  NOTES.md  PROGRESS.md  README.md  SECURITY_BASELINE.md  alembic.ini  docker-compose.yml  founderOS_MASTER_PLAYBOOK.md  pyproject.toml  renovate.json
.claude/: launch.json
app/: main.py
docs/: ALIGNMENT_AUDIT.md  CHANGELOG.md  CURRENT_DIRTY_TREE_PLAN.md  DECISIONS.md  POST_MVP.md  README.md  ROADMAP.md  TODO.md  architecture.md  backlog.md  coding-rules.md  data-model.md  dev-env.md  github-integration-decision.md  index.md  mvp-quickstart.md  obsidian-bridge.md  operator_runtime_setup.md  playbook-digital-twin.md  playbook.md  source-connectors.md  vision.md  workflows.md
migrations/: env.py
scripts/: bootstrap_local_workspace.py  build_jira_blueprint.py  check_external_connectors_readonly.py  check_github_org_readonly_inventory.py  check_jira_readonly_inventory.py  check_no_secrets.sh  compare_attention_triage_llm_vs_deterministic.py  continue_manual_pilot_delivery_draft.py  create_admin_user.py  doctor_external_connector_config.py  doctor_guarded_execution.py  doctor_no_marker_grouped_lifecycle_review.py  export_discovery_package.py  export_obsidian_vault.py  ingest_local_org_repositories.py  launch_codex_operator.sh  list_github_repos_readonly.py  list_jira_projects_readonly.py  list_persisted_attention_digest_windows.py  manual_no_marker_grouped_lifecycle_review.py  manual_no_marker_grouped_lifecycle_review_sweep.py  map_github_repos.py  map_jira_projects.py  (+45 more)
(+533 files in other folders)
