[project]
name = "company-knowledge-os"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "redis>=5.0.0",
  "httpx>=0.27.0",
  "tenacity>=8.5.0",
  "structlog>=24.0.0",
  "psycopg[binary]>=3.2.0",
  "google-api-python-client>=2.194.0",
  "google-auth-oauthlib>=1.3.1",
  "google-auth>=2.49.2",
  "openai>=2.32.0",
]

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
